<resources>

    <!--WalletHome-->
    <string name="title_activity_wallet">我的钱包</string>
    <string name="wallet_home_total_money">钱包总额</string>
    <string name="wallet_home_default_balance">0.00</string>
    <string name="wallet_home_forward">充值</string>
    <string name="wallet_home_recharge">提现</string>
    <string name="wallet_home_bill">账单明细</string>
    <string name="wallet_home_payment_setting">支付设置</string>
    <string name="wallet_home_back_card">我的银行卡</string>
    <string name="wallet_home_alipay">我的支付宝</string>
    <string name="wallet_home_backcard_un_bind">未绑定</string>
    <!--WalletHome-->

    <!--WalletForward-->
    <string name="title_activity_forward">余额充值</string>
    <!--WalletForward-->

    <!--WalletQuestion-->
    <string name="title_activity_wallet_question">常见问题</string>
    <string name="wallet_question_what_is_the_balance">什么是余额</string>
    <string name="wallet_question_how_to_recharge">如何充值</string>
    <string name="wallet_question_how_to_present">如何提现</string>
    <string name="wallet_question_how_to_add_bank_card">如何添加银行卡</string>
    <string name="wallet_question_how_to_delete_bank_card">如何删除银行卡</string>
    <string name="wallet_question_function_of_wallet">钱包的功能</string>
    <!--WalletQuestion-->

    <!--WalletForward-->
    <string name="wallet_forward_forawrd_type">充值方式</string>
    <string name="wallet_forward_alipay">支付宝</string>
    <string name="wallet_forward_recharge_amount">充值金额</string>
    <string name="wallet_forward_hint_please_input_amount">请输入金额</string>
    <string name="wallet_forward_max_forward_amount">该卡本次最多可充值¥10000</string>
    <string name="wallet_forward_confirm_forward">确认充值</string>
    <string name="wallet_forward_success">充值成功</string>
    <string name="wallet_forward_faile">充值失败,请重试</string>
    <!--WalletForward-->

    <!--WalletBill-->
    <string name="title_activity_wallet_bill">账单明细</string>
    <!--WalletBill-->

    <!--WalletDetail-->
    <string name="title_activity_wallet_bill_detail">账单详情</string>
    <string name="wallet_bill_detail_amount">交易金额</string>
    <string name="wallet_bill_detail_type">交易类型</string>
    <string name="wallet_bill_detail_time">交易时间</string>
    <string name="wallet_bill_detail_id">流水单号</string>
    <string name="wallet_bill_detail_source">来源</string>
    <!--WalletDetail-->

    <!--WalletPaySettings-->
    <string name="title_activity_wallet_pay_settings">支付设置</string>
    <string name="wallet_settings_alert_pay_password">修改支付密码</string>
    <string name="wallet_settings_reset_pay_password">找回支付密码</string>
    <string name="wallet_settings_non_secret_payment_tip">开启后，支付时无需输入密码或指纹</string>
    <string name="wallet_settings_non_secret_payment">小额免密</string>
    <string name="wallet_settings_non_secret_payment_able">已开启</string>
    <string name="wallet_settings_non_secret_payment_unable">未开启</string>
    <string name="wallet_settings_fingerprint_payment_tip">开启后，可通过验证指纹快速完成付款</string>
    <string name="wallet_settings_fingerprint_payment">指纹支付</string>
    <string name="wallet_settings_phone_leve_too_low">手机版本过低</string>
    <string name="wallet_settings_no_fingerprint_mpdule">没有指纹识别模块</string>
    <string name="wallet_settings_no_fingerprint">没有录入指纹</string>
    <string name="wallet_settings_no_keyguard_secure">没有开启锁屏密码</string>
    <!--WalletPaySettings-->

    <!--WalletBankCard-->
    <string name="title_activity_wallet_bank_card">我的银行卡</string>
    <!--WalletBankCard-->

    <!--WalletAliPay-->
    <string name="title_activity_wallet_ali_pay">我的支付宝</string>
    <!--WalletAliPay-->

    <!--WalletNonSecretPayment-->
    <string name="title_activity_wallet_non_secret_payment">设置小额免密</string>
    <string name="wallet_non_secret_payment">小额免密支付</string>
    <string name="wallet_non_secret_protocol">《支付协议》</string>
    <string name="wallet_non_secret_tip">开启后，支付时无需输入支付密码或指纹</string>
    <string name="wallet_non_secret_50">¥50</string>
    <string name="wallet_non_secret_200">¥200</string>
    <string name="wallet_non_secret_500">¥500</string>
    <string name="wallet_non_secret_1000">¥1000</string>
    <!--WalletNonSecretPayment-->

    <!--WallerAlertPayPassword-->
    <string name="title_activity_wallet_alert_pay_password">修改支付密码</string>
    <string name="alert_pay_password_please_input_previous_pay_password">请输入原支付密码</string>
    <string name="alert_pay_password_please_input_previous_pay_password_error">支付密码错误,请重试</string>
    <string name="alert_pay_password_please_input_alert_pay_password">请输入修改密码</string>
    <string name="alert_pay_password_please_input_alert_pay_password_diff">输入修改密码不同,请重试</string>
    <string name="alert_pay_password_please_confirm_alert_pay_password">请确认新的支付密码</string>
    <string name="alert_pay_password_alert_success">修改成功</string>
    <!--WallerAlertPayPassword-->

</resources>
