<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="#F5F5F5"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.pay_settings.WalletPaySettingsActivity"
    tools:showIn="@layout/activity_wallet_pay_settings">

    <FrameLayout
        android:background="@color/white"
        android:id="@+id/wallet_settings_alert_pay_password"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/wallet_settings_alert_pay_password"
            android:textSize="14dp"
            android:layout_marginStart="12dp"
            android:textColor="#101010"
            android:layout_gravity="center_vertical|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_marginEnd="8dp"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/wallet_home_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <View
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <FrameLayout
        android:background="@color/white"
        android:id="@+id/wallet_settings_reset_pay_password"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/wallet_settings_reset_pay_password"
            android:textSize="14dp"
            android:layout_marginStart="12dp"
            android:textColor="#101010"
            android:layout_gravity="center_vertical|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_marginEnd="8dp"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/wallet_home_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <TextView
        android:text="@string/wallet_settings_non_secret_payment_tip"
        android:layout_width="match_parent"
        android:paddingStart="14dp"
        android:gravity="center_vertical"
        android:textSize="14dp"
        android:textColor="#888888"
        android:layout_height="40dp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/wallet_settings_non_secret_payment"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/wallet_settings_non_secret_payment"
            android:textColor="#101010"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/wallet_home_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/wallet_settings_non_secret_payment_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/wallet_settings_non_secret_payment_unable"
            android:textColor="#888888"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:text="@string/wallet_settings_fingerprint_payment_tip"
        android:layout_width="match_parent"
        android:paddingStart="14dp"
        android:gravity="center_vertical"
        android:textSize="14dp"
        android:textColor="#888888"
        android:layout_height="40dp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/wallet_settings_fingerprint_payment"
            android:background="@color/white"
            android:paddingEnd="8dp"
            android:paddingStart="12dp"
            android:textColor="#101010"
            android:textSize="14dp"
            android:text="@string/wallet_settings_fingerprint_payment"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

</LinearLayout>