<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:background="#F5F5F5"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.non_secret_payment.WalletNonSecretPaymentActivity"
    tools:showIn="@layout/activity_wallet_non_secret_payment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/wallet_non_secret_payment"
            android:background="@color/white"
            android:paddingEnd="8dp"
            android:paddingStart="12dp"
            android:textColor="#101010"
            android:textSize="14dp"
            android:text="@string/wallet_non_secret_payment"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <include layout="@layout/content_wallet_non_secret_payment_quota"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="19dp"
            android:text="@string/wallet_non_secret_tip"
            android:textSize="12dp"
            android:textColor="#999999"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="#101010"
            android:textSize="12dp"
            android:text="开启即同意"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/wallet_non_secret_protocol"
            android:textColor="#66BEFF"
            android:textSize="12dp"
            android:text="@string/wallet_non_secret_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</FrameLayout>