<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#f5f5f5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.forward.WalletForwardActivity"
    tools:showIn="@layout/activity_wallet_forward">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="76dp"
            android:layout_height="52dp"
            android:gravity="center"
            android:text="@string/wallet_forward_forawrd_type"
            android:textColor="#999999"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/wallet_forward_resouse_type_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/wallet_forward_resouse_type_icon" />

        <TextView
            android:id="@+id/wallet_forward_resouse_type"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/wallet_forward_alipay"
            android:textColor="#666666"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/wallet_forward_resouse_type_icon"
            app:layout_constraintEnd_toStartOf="@+id/wallet_forward_resouse_type_icon"
            app:layout_constraintTop_toTopOf="@+id/wallet_forward_resouse_type_icon" />

        <ImageView
            android:id="@+id/wallet_forward_resouse_type_icon"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/wallet_home_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="#f2f2f2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="76dp"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/wallet_forward_recharge_amount"
            android:textColor="#999999"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="45dp"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="¥"
            android:textColor="@color/black"
            android:textSize="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/wallet_forward_amount"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:gravity="center_vertical|start"
            android:hint="@string/wallet_forward_hint_please_input_amount"
            android:inputType="number"
            android:textColor="#101010"
            android:textColorHint="#BBBBBB"
            android:textSize="28dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#f2f2f2"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:layout_width="178dp"
            android:layout_height="44dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:gravity="start|center_vertical"
            android:text="@string/wallet_forward_max_forward_amount"
            android:textColor="#999999"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/wallet_forward_submit"
        android:textSize="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@drawable/pay_home_submit_unable_bg"
        android:text="@string/wallet_forward_confirm_forward"
        android:layout_width="match_parent"
        android:clickable="false"
        android:layout_height="45dp" />

</LinearLayout>