<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="#f2f2f2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.question.WalletQuestionActivity"
    tools:showIn="@layout/activity_wallet_question">

    <View
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <FrameLayout
        android:id="@+id/wallet_question_what_is_the_balance_layout"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:text="@string/wallet_question_what_is_the_balance"
            android:textSize="14dp"
            android:layout_marginStart="12dp"
            android:textColor="#101010"
            android:layout_gravity="center_vertical|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/wallet_home_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>


    <View
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <FrameLayout
        android:id="@+id/wallet_question_how_to_recharge_layoout"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:text="@string/wallet_question_how_to_recharge"
            android:textSize="14dp"
            android:layout_marginStart="12dp"
            android:textColor="#101010"
            android:layout_gravity="center_vertical|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/wallet_home_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>


    <View
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <FrameLayout
        android:id="@+id/wallet_question_how_to_present_layoout"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:text="@string/wallet_question_how_to_present"
            android:textSize="14dp"
            android:layout_marginStart="12dp"
            android:textColor="#101010"
            android:layout_gravity="center_vertical|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/wallet_home_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <View
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <FrameLayout
        android:id="@+id/wallet_question_how_to_add_bank_card_layout"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView

            android:text="@string/wallet_question_how_to_add_bank_card"
            android:textSize="14dp"
            android:layout_marginStart="12dp"
            android:textColor="#101010"
            android:layout_gravity="center_vertical|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/wallet_home_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <View
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <FrameLayout
        android:id="@+id/wallet_question_how_to_delete_bank_card_layout"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:text="@string/wallet_question_how_to_delete_bank_card"
            android:textSize="14dp"
            android:layout_marginStart="12dp"
            android:textColor="#101010"
            android:layout_gravity="center_vertical|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/wallet_home_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <View
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <FrameLayout
        android:id="@+id/wallet_question_function_of_wallet_layout"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:text="@string/wallet_question_function_of_wallet"
            android:textSize="14dp"
            android:layout_marginStart="12dp"
            android:textColor="#101010"
            android:layout_gravity="center_vertical|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/wallet_home_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

</LinearLayout>